Undoing 2 parts of changeset 1.1730.1.1 : - the one about BUG#2921 - the one about relay log flushing Both will be rewritten in a next changeset (this one will not be pushed before the next changeset).